--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -101,7 +101,7 @@
        <div class="tax-toggle">
         <div class="form-check-reverse form-switch">
   <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-  <label class="form-check-label" for="switchCheckDefault">Display roral after taxes</label>
+  <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
 </div>
        </div>
     </div>
